# blemderer

./: .gitignore  CMakeLists.txt  readme.md
assets/pixel_art/: rename_files.sh
assets/tiled/: blemderer.tiled-session  test.tmx
include/: blemderer.h  layer.h  settings.h  tileset.h  video_settings.h
src/: blemderer.cpp  main.cpp  settings.cpp  video_settings.cpp
